# GUI_Converter

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  requirements.txt  tyqiw.txt
.github/workflows/: test.yml
UI/: __init__.py  constants.py  format_converter_previewer.py  main_tab.py  utils.py
UI/tabs/: format_converter.py  main_tab.py  pictures_tab.py
tests/: main_tab_tests.py
ui/: constants.py  utils.py
