[project]
name = "gui-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem",email = "viking10934455@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
